<resources>
    <string name="app_name">대피로</string>

    <string name="홈">홈</string>
    <string name="가족">가족</string>
    <string name="후원">후원</string>
    <string name="마이페이지">마이페이지</string>

    <string name="마감임박순">마감임박순</string>
    <string name="전체">전체</string>
    <string name="후원하기">후원하기</string>
    <string name="후원정보">후원정보</string>
    <string name="후원사_소개">후원사 소개</string>

    <string name="스팸_문자처럼_쌓여가는_재난_문자로_불편하셨나요_">스팸 문자처럼 쌓여가는\n재난 문자로 불편하셨나요?</string>
    <string name="이제는_대피로에서_알림받고_싶은_재난_유형과_지역을_">이제는 ‘대피로’에서\n알림받고 싶은 재난 유형과 지역을\n맞춤형으로 설정하세요!</string>
    <string name="다음">다음</string>
    <string name="대피로에서_사용하실_닉네임을_설정해주세요_">대피로에서 사용하실\n이름과 닉네임을 입력해주세요.</string>
    <string name="닉네임">닉네임</string>
    <string name="이름">이름</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="네트워크_상태가_불안정합니다_행동요령_및_대피소_조회_화면으로_이동할_수_있습니다_">네트워크 상태가 불안정합니다.\n행동요령 및 대피소 조회 화면으로\n이동할 수 있습니다.</string>
    <string name="행동요령">행동요령</string>
    <string name="대피소_조회">대피소 조회</string>
    <string name="비상대비">비상대비</string>
    <string name="자연재난">자연재난</string>
    <string name="기타">기타</string>
    <string name="위치_설정">위치 설정</string>
    <string name="시도">시/도</string>
    <string name="구군">구/군</string>
    <string name="동읍면">동/읍/면</string>
    <string name="완료">완료</string>
    <string name="새로고침">새로고침</string>
    <string name="화재_행동요령_체크리스트">화재 행동요령 체크리스트</string>
    <string name="호우_행동요령_체크리스트">호우 행동요령 체크리스트</string>
    <string name="실내">실내</string>
    <string name="실외">실외</string>
    <string name="주변_대피소">주변 대피소</string>
    <string name="모두보기">모두보기</string>
    <string name="지진">지진</string>
    <string name="수해">수해</string>
    <string name="전쟁">전쟁</string>
    <string name="주변_대피소_조회">주변 대피소 조회</string>
    <string name="복사">복사</string>
    <string name="주소_복사가_완료">주소 복사가 완료되었습니다.</string>
    <string name="지역을_선택">지역을 선택해주세요</string>
    <string name="현재_조회된">현재 조회된 대피소가 없습니다</string>
    <string name="지역을_선택해">지역을 선택해주세요</string>
    <string name="주변_800m">주변 800m내에 대피소가 없습니다</string>
    <string name="전체_대피소로">전체 대피소로 조회해 주세요</string>
    <string name="대피로와_함께_명이_후원에_참여했어요_">대피로와 함께 %s명이 후원에 참여했어요.</string>
    <string name="_님의_가치있는_후원_대피로와_함께하세요_">%s님의\n가치있는 후원, 대피로와 <함께></함께>하세요!</string>
    <string name="_님이_참여중인_후원이에요_">%s님이 참여중인 후원이에요.</string>
    <string name="인기순">인기순</string>
    <string name="최신순">최신순</string>
    <string name="주소_복사가_완료되었습니다_">주소 복사가 완료되었습니다.</string>
    <string name="지역을_선택해주세요">지역을 선택해주세요</string>
    <string name="현재_조회된_대피소가_없습니다">현재 조회된 대피소가 없습니다</string>
    <string name="주변_800m내에_지진_대피소가_없습니다">주변 800m내에 대피소가 없습니다</string>
    <string name="전체_대피소로_조회해_주세요">전체 대피소로 조회해 주세요</string>

    <string name="재난상황">재난상황</string>
    <string name="동네생활">동네생활</string>
    <string name="커뮤니티">커뮤니티</string>
    <string name="댓글">댓글</string>
    <string name="등급">등급</string>

    <string name="마음충전">마음충전</string>
    <string name="마음이란_">마음이란?</string>
    <string name="보유_마음">보유 마음</string>
    <string name="대피로에서_재난_후원을_할_때에_필요한_전용_결제_수단입니다.">대피로에서 재난 후원을 할 때에 필요한\n전용 결제 수단입니다.</string>
    <string name="내_마음">내 마음</string>
    <string name="관리">관리</string>
    <string name="가족_초대하기">가족 초대하기</string>
    <string name="닫기">닫기</string>
    <string name="현재_위험_지역에_있어요_안부를_물어보세요_">현재 위험 지역에 있어요. 안부를 물어보세요!</string>
    <string name="안부묻기">안부묻기</string>
    <string name="건너뛰기">건너뛰기</string>
    <string name="의견남기기">의견남기기</string>
    <string name="응원의_한마디">응원의 한마디</string>
    <string name="충전하기">충전하기</string>
    <string name="응원하기">응원하기</string>

    <string name="기부를_하는_기부를_받는_">기부를 하는, 기부를 받는 모두에게\n힘이 나는 메시지를 남겨주세요!</string>
    <string name="메시지는_후원_페이지_상단에_노출돼요_">메시지는 후원 페이지 상단에 노출돼요.</string>
    <string name="여러분의_메시지를_전해보세요_">여러분의 메시지를 전해보세요. (최대 15자)</string>

    <string name="대피로에서_제공하는_서비스를_이용하기_위해_">대피로에서 제공하는 서비스를 이용하기 위해\n위치 권한 항상 허용으로 설정해주세요.</string>
    <string name="위치_권한을_항상_허용_하지_않을_경우_">위치 권한을 ‘항상 허용’하지 않을 경우\n서비스 이용이 제한됩니다.</string>

    <string name="지역">지역</string>
    <string name="알림_받고_싶은_지역을_선택해주세요_">알림 받고 싶은\n지역을 선택해주세요.</string>
    <string name="지역은_최대_3개까지_선택할_수_있습니다_">지역은 최대 3개까지 선택할 수 있습니다.</string>
    <string name="재난_유형">재난 유형</string>
    <string name="알림_받고_싶은_재난_유형을_선택해주세요_">알림 받고 싶은\n재난 유형을 선택해주세요.</string>
    <string name="전체선택">전체선택</string>
    <string name="사회재난">사회재난</string>

    <string name="가뭄">가뭄</string>
    <string name="지금_바로_대피로와_함께_안전한_생활을_시작해보세요_">지금 바로 대피로와 함께\n안전한 생활을 시작해보세요!</string>
    <string name="시작하기">시작하기</string>


    <string name="가족_맺기를_수락하시면_서로의_안전_상태를_">가족 맺기를 수락하시면 서로의 안전 상태를 확인할 수 있어요. </string>
    <string name="초대_수락하기">초대 수락하기</string>
    <string name="_님이_대피로_가족으로_초대하셨어요_">%s님이 대피로 가족으로 초대하셨어요!</string>
    <string name="안전해요">안전해요</string>
    <string name="위험해요">위험해요</string>
    <string name="_님을_삭제하시겠습니까_">%s님을 삭제하시겠습니까?</string>

    <string name="일상">일상</string>
    <string name="교통">교통</string>
    <string name="치안">치안</string>

    <string name="게시글_주제">게시글 주제</string>
    <string name="선택하기">선택하기</string>

    <string name="글_제목">글 제목</string>
    <string name="글쓰기">글쓰기</string>
    <string name="게시글의_주제를_선택해주세요_">게시글의 주제를 선택해주세요.</string>
    <string name="제목을_입력하세요_">제목을 입력하세요.</string>
    <string name="동네_생활과_관련된_질문이나_이야기를_주민들과_나누세요_">동네 생활과 관련된 질문이나 이야기를 주민들과 나누세요.</string>
    <string name="사진">사진</string>
    <string name="주의">주의</string>
    <string name="안전하고_건강한_소통을_위해_대피로에서는_커뮤니티_이용규칙을_제정하여_운영하고_있습니다">안전하고 건강한 소통을 위해 \'대피로\'에서는 커뮤니티 이용규칙을 제정하여 운영하고 있습니다. 위반시, 게시물이 삭제되고 일정 기간동안 서비스 이용이 제한됩니다.\n\n&#160;&#160;∙&#160;욕설,비방 등의 명예훼손을 야기할 수 있는 행위 금지\n&#160;&#160;∙&#160;정치 및 사회 관련 행위 금지\n&#160;&#160;∙&#160;홍보 및 판매를 위한 행위 금지</string>
    <string name="댓글을_입력해주세요">댓글을 입력해주세요</string>
    <string name="게시">게시</string>

    <string name="수정하기">수정하기</string>
    <string name="신고하기">신고하기</string>
    <string name="삭제하기">삭제하기</string>

    <string name="현_위치를_표시하겠어요_">현 위치를 표시하겠어요?</string>


    <string name="나의_후원_기록">나의 후원 기록</string>
    <string name="내가_쓴_글">내가 쓴 글</string>
    <string name="저장한_글">저장한 글</string>
    <string name="공지사항">공지사항</string>
    <string name="환불_정책">환불 정책</string>
    <string name="개인정보_처리_약관">개인정보 처리 약관</string>
    <string name="앱_버전">앱 버전</string>
    <string name="예">예</string>
    <string name="아니오">아니오</string>

    <string name="재난문자">재난문자</string>
    <string name="알림">알림</string>
    <string name="소식">소식</string>
</resources>