<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/홈"
        android:enabled="true"
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home" />
    <item
        android:title="커뮤니티"
        android:enabled="true"
        android:id="@+id/communityFragment"
        android:icon="@drawable/ic_community"/>
    <item
        android:title="@string/가족"
        android:enabled="true"
        android:id="@+id/familyFragment"
        android:icon="@drawable/ic_family" />
    <item
        android:title="@string/후원"
        android:enabled="true"
        android:id="@+id/fundingFragment"
        android:icon="@drawable/ic_funding" />
    <item
        android:title="@string/마이페이지"
        android:enabled="true"
        android:id="@+id/mypageFragment"
        android:icon="@drawable/ic_mypage" />
</menu>