<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.networkerror.BehaveTipFragment"
    android:orientation="vertical">

        <include
            android:id="@+id/include_app_bar"
            layout="@layout/include_app_bar"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/outline"/>


<com.google.android.material.tabs.TabLayout
    android:id="@+id/tabLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:tabRippleColor="@android:color/transparent"
    app:tabSelectedTextColor="@color/secondary_900"
    app:tabTextColor="@color/secondary_200"
    app:tabTextAppearance="@style/button"
    app:tabIndicatorColor="@color/secondary_800"
    app:tabIndicatorHeight="2dp"
    app:tabGravity="fill"
    app:tabIndicatorFullWidth="true">

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/자연재난"
        android:stateListAnimator="@null"
        style="@style/button"/>
    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/사회재난"
        style="@style/button"
        android:stateListAnimator="@null"/>
    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/비상대비"
        style="@style/button"
        android:stateListAnimator="@null"/>
    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/기타"
        style="@style/button"
        android:stateListAnimator="@null"/>

</com.google.android.material.tabs.TabLayout>

<androidx.fragment.app.FragmentContainerView
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>

</LinearLayout>
</layout>