<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_radius_4"
        android:backgroundTint="@color/white"
        android:layout_marginHorizontal="42dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitle1"
                android:layout_marginVertical="13dp"
                android:text="@string/응원의_한마디"
                android:textColor="@color/orange_500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/outline"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitle1"
                android:textColor="@color/secondary_800"
                android:text="@string/기부를_하는_기부를_받는_"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/caption"
                android:textColor="@color/secondary_200"
                android:layout_marginTop="4dp"
                android:text="@string/메시지는_후원_페이지_상단에_노출돼요_"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_radius_4"
                android:backgroundTint="@color/orange_50"
                android:paddingVertical="15dp"
                android:paddingHorizontal="12dp">

                <EditText
                    android:id="@+id/et_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/caption"
                    android:textColorHint="@color/orange_300"
                    android:singleLine="true"
                    android:maxLength="15"
                    android:maxEms="15"
                    android:hint="@string/여러분의_메시지를_전해보세요_"
                    android:textColor="@color/orange_500"
                    android:background="@null"/>
            </FrameLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">
                <TextView
                    android:id="@+id/btn_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/button"
                    android:layout_weight="1"
                    android:textColor="@color/secondary_400"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:background="@drawable/bg_radius_4"
                    android:backgroundTint="@color/secondary_50"
                    android:layout_marginRight="8dp"
                    android:text="@string/건너뛰기"/>
                <TextView
                    android:id="@+id/btn_complete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/button"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:background="@drawable/bg_radius_4"
                    android:backgroundTint="@color/orange_500"
                    android:text="@string/의견남기기"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>