<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="13dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/subtitle1"
            android:textColor="@color/secondary_600"
            android:text="@string/마이페이지"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/img_profile_default"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        style="@style/headline6"
        android:textColor="@color/secondary_600"
        android:text="@string/닉네임"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:cardCornerRadius="4dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/outline"
        app:contentPaddingTop="3dp"
        app:contentPaddingBottom="3dp"
        app:contentPaddingLeft="12dp"
        app:contentPaddingRight="12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:textColor="@color/secondary_400"
            android:text="@string/등급"/>
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_radius_12"
        android:backgroundTint="@color/orange_500"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        android:layout_marginHorizontal="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_heart_count"
            android:layout_marginRight="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/subtitle1"
            android:textColor="@color/white"
            android:layout_marginRight="6dp"
            android:text="@string/보유_마음"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:textColor="@color/orange_200"
            android:text="200개"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:textColor="@color/white"
            android:text="@string/충전하기"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/bg_radius_12"
        android:layout_marginHorizontal="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="24dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_filter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button"
                android:textColor="@color/secondary_800"
                android:layout_marginTop="8dp"
                android:text="맞춤필터"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
            android:layout_width="1dp"
            android:layout_height="70dp"
            android:background="@color/outline"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="24dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mypage"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button"
                android:textColor="@color/secondary_800"
                android:layout_marginTop="8dp"
                android:text="내정보"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
            android:layout_width="1dp"
            android:layout_height="70dp"
            android:background="@color/outline"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="24dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_alarm"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button"
                android:textColor="@color/secondary_800"
                android:layout_marginTop="8dp"
                android:text="알림설정"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_radius_12"
        android:backgroundTint="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:textColor="@color/secondary_600"
            android:padding="16dp"
            android:text="@string/후원내역"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:textColor="@color/secondary_600"
            android:padding="16dp"
            android:text="@string/내가_쓴_글"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:textColor="@color/secondary_600"
            android:padding="16dp"
            android:text="@string/저장한_글"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:textColor="@color/secondary_600"
            android:padding="16dp"
            android:text="@string/공지사항"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:textColor="@color/secondary_600"
            android:padding="16dp"
            android:text="@string/환불_정책"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subtitle2"
            android:textColor="@color/secondary_600"
            android:padding="16dp"
            android:text="@string/개인정보_처리_약관"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitle2"
                android:textColor="@color/secondary_600"
                android:text="@string/앱_버전"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitle2"
                android:textColor="@color/secondary_300"
                android:text="v.1.0.6"/>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
</layout>